tests/paczka1/fuzzy1/24470441.err
Error in line 14: 81S A322 2,7
Error in line 22: 81S A86 42,1
Error in line 28: N1p3PqfG3 A86 25,39
Error in line 34: 81S S432 6,5
Error in line 38: 81S A322 3,6
